--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Bank</h1>
+    <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
             <a href="#credit-card">Credit Card</a>
             <a href="#personal-loan">Personal Loan</a>
@@ -19,22 +18,24 @@
         <section class="banners">
             <h2>Limited Time Offers!</h2>
             <div class="banner">
+                <img src="image_credit_card_banner.jpg" alt="Credit Card Banner">
                 <h3>Get a 0% APR for the first year on our new Credit Card!</h3>
                 <a href="#credit-card">Learn More</a>
             </div>
             <div class="banner">
+                <img src="image_personal_loan_banner.jpg" alt="Personal Loan Banner">
                 <h3>Consolidate your debts with a low-interest Personal Loan.</h3>
                 <a href="#personal-loan">Apply Now</a>
             </div>
             <div class="banner">
+                <img src="image_home_loan_banner.jpg" alt="Home Loan Banner">
                 <h3>Own your dream home with our competitive Home Loan rates.</h3>
                 <a href="#home-loan">Get a Quote</a>
             </div>
         </section>
         <section class="newsletter">
             <h2>Subscribe to our Newsletter</h2>
-            <form id="newsletter-form">
-                <label for="email">Email Address:</label>
+            <form id="newsletter-form" style="border: 1px solid #ddd; padding: 10px;"> <label for="email">Email Address:</label>
                 <input type="email" id="email" required>
                 <button type="submit">Subscribe</button>
             </form>
@@ -82,10 +83,5 @@
             </form>
         </div>
     </main>
-    <footer>
-        <p>&copy; My Bank 2024</p>
-    </footer>
- 
-    <script src="script.js"></script>
-</body>
-</html>
+    <footer style="background-color: #f0f0f0; text-align: center;">
+has context menu
