--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
-            <a href="#credit-card">Credit Card</a>
-            <a href="#personal-loan">Personal Loan</a>
-            <a href="#home-loan">Home Loan</a>
+            <a href="form.html">Credit Card</a>
+            <a href="form.html">Personal Loan</a>
+            <a href="form.html">Home Loan</a>
         </nav>
     </header>
     <main>
