--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button type="submit">Subscribe</button>
             </form>
         </section>
-        <a href="form.html">Apply for a Loan</a>
+        <a href="form.html" class="flashy-button">Apply for a Loan</a>
     </main>
     <footer style="background-color: #f0f0f0; text-align: center;">
 has context menu
