--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <div class="banner">
                 <img src="image_credit_card_banner.jpg" alt="Credit Card Banner">
                 <h3>Get a 0% APR for the first year on our new Credit Card!</h3>
-                <a href="#credit-card">Learn More</a>
+                <a href="form.html">Learn More</a>
             </div>
             <div class="banner">
                 <img src="image_personal_loan_banner.jpg" alt="Personal Loan Banner">
                 <h3>Consolidate your debts with a low-interest Personal Loan.</h3>
-                <a href="#personal-loan">Apply Now</a>
+                <a href="form.html">Apply Now</a>
             </div>
             <div class="banner">
                 <img src="image_home_loan_banner.jpg" alt="Home Loan Banner">
                 <h3>Own your dream home with our competitive Home Loan rates.</h3>
-                <a href="#home-loan">Get a Quote</a>
+                <a href="form.html">Get a Quote</a>
             </div>
         </section>
         <section class="newsletter">
