--- a/form.html
+++ b/form.html
@@ -26,9 +26,11 @@
           </div>
           <div class="loan-type">
             <input type="radio" id="personal-loan" name="loan-type" value="personal-loan" required>
+            <label for="personal-loan">Personal Loan</label>
           </div>
           <div class="loan-type">
             <input type="radio" id="home-loan" name="loan-type" value="home-loan" required>
+            <label for="home-loan">Home Loan</label>
           </div>
         </fieldset>
  
