--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <main>
     <div id="application-container">
       <h2>Apply for a Loan</h2>
-      <form id="loan-form">
+      <form id="loan-form" onsubmit="submitForm(event)">
         <fieldset>
           <legend>Choose Your Loan</legend>
           <div class="loan-type">
