--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
-            <a href="form.html">Credit Card</a>
+            <a href="f1.html">Credit Card</a>
             <a href="form.html">Personal Loan</a>
             <a href="form.html">Home Loan</a>
         </nav>
