--- a/creditForm.html
+++ b/creditForm.html
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     <div class="container">
       <div class="card">
-        <h1>Home Loan Details</h1>
+        <h1>Credit card Details</h1>
         <form id="creditCardForm" method="post" onsubmit="submitForm(event)">
           <div class="personal-details">
             <h2>Personal Details</h2>
@@ -251,9 +251,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="footer-content">
         <nav class="nav bd-container">
           <div class="footer__left">
-            <a href="#" class="nav__logo">
-              <img src="assets/img/Main-Logo-Footer.png" alt="Your Logo" />
-            </a>
+            
             <div class="footer__right">
               <p class="footer__copy">&#169; 2024 Rajabhishek. All right reserved</p>
             </div>
