--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
             <a href="creditForm.html">Credit Card</a>
-            <a href="form.html">Personal Loan</a>
-            <a href="form.html">Home Loan</a>
+            <a href="personalForm.html">Personal Loan</a>
+            <a href="homeForm.html">Home Loan</a>
         </nav>
     </header>
     <main>
@@ -40,17 +40,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="banner">
                 <img src="image_credit_card_banner.jpg" alt="Credit Card Banner">
                 <h3>Get a 0% APR for the first year on our new Credit Card!</h3>
-                <a href="form.html">Learn More</a>
+                <a href="creditForm.html">Learn More</a>
             </div>
             <div class="banner">
                 <img src="image_personal_loan_banner.jpg" alt="Personal Loan Banner">
                 <h3>Consolidate your debts with a low-interest Personal Loan.</h3>
-                <a href="form.html">Apply Now</a>
+                <a href="personalForm.html">Apply Now</a>
             </div>
             <div class="banner">
                 <img src="image_home_loan_banner.jpg" alt="Home Loan Banner">
                 <h3>Own your dream home with our competitive Home Loan rates.</h3>
-                <a href="form.html">Get a Quote</a>
+                <a href="homeForm.html">Get a Quote</a>
             </div>
         </section>
         <section class="newsletter">
@@ -62,5 +62,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
         <a href="form.html" class="flashy-button">Apply for a Loan</a>
     </main>
-    <footer style="background-color: #f0f0f0; text-align: center;">
-has context menu
+    <!--========== FOOTER ==========-->
+    <footer class="footer section bd-container">
+        <div class="footer-content">
+          <nav class="nav bd-container">
+            <div class="footer__left">
+              
+              <div class="footer__right">
+                <p class="footer__copy">&#169; 2024 Rajabhishek. All right reserved</p>
+              </div>
+            </div>
+            <div class="back-to-top">
+              <a href="#top"> ^ Back to Top</a>
+            </div>
+          </nav>
+        </div>
+      </footer>
+    </body>
+  </html>
