--- a/personalForm.html
+++ b/personalForm.html
@@ -156,13 +156,13 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTD7JQ9R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    <<header style="background-color: #3f51b5; color: white;">
-    <a href="index.html"><h1>My Bank</h1></a> <nav>
-      <a href="#credit-card">Credit Card</a>
-      <a href="#personal-loan">Personal Loan</a>
-      <a href="#home-loan">Home Loan</a>
-    </nav>
-  </header>
+    <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
+        <nav>
+            <a href="creditForm.html">Credit Card</a>
+            <a href="personalForm.html">Personal Loan</a>
+            <a href="homeForm.html">Home Loan</a>
+        </nav>
+    </header>
       
     <div class="container">
       <div class="card">
