--- a/homeForm.html
+++ b/homeForm.html
@@ -158,9 +158,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
-            <a href="creditForm.html">Credit Card</a>
-            <a href="personalForm.html">Personal Loan</a>
-            <a href="homeForm.html">Home Loan</a>
+            <a href="creditForm.html" class="nav">Credit Card</a>
+            <a href="personalForm.html" class="nav">Personal Loan</a>
+            <a href="homeForm.html" class="nav">Home Loan</a>
         </nav>
     </header>
       
