--- a/personalForm.html
+++ b/personalForm.html
@@ -30,7 +30,7 @@
       .card {
         width: 100%;
         max-width: 600px;
-        background-color: #fff;
+        background-color: #00008B;
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -158,9 +158,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
         <nav>
-            <a href="creditForm.html">Credit Card</a>
-            <a href="personalForm.html">Personal Loan</a>
-            <a href="homeForm.html">Home Loan</a>
+            <a href="creditForm.html" class="nav">Credit Card</a>
+            <a href="personalForm.html" class="nav">Personal Loan</a>
+            <a href="homeForm.html" class="nav">Home Loan</a>
         </nav>
     </header>
       
