--- a/confirm.html
+++ b/confirm.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body>
   <header style="background-color: #3f51b5; color: white;">
-    <a href="index.html"><h1>My Bank</h1></a>
+    <a href="index.html"><h1>Raj Bank</h1></a>
   </header>
   <main>
     <div id="confirmation-container">
