--- a/creditForm.html
+++ b/creditForm.html
@@ -180,7 +180,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTD7JQ9R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    <header style="background-color: #3f51b5; color: white;"> <h1>My Bank</h1>
+    
+    <header style="background-color: #3f51b5; color: white;">
+    <a href="index.html"><h1>Raj Bank</h1></a>
         <nav>
             <a href="creditForm.html" class="nav">Credit Card</a>
             <a href="personalForm.html" class="nav">Personal Loan</a>
