--- a/creditForm.html
+++ b/creditForm.html
@@ -58,7 +58,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       }
-
+      h1 {
+        text-align: center;
+        margin-top: 30px;
+      }
 
       h2 {
         font-size: 18px;
@@ -188,7 +191,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     <div class="container">
       <div class="card">
-        <h2>Credit card Details</h2>
+        <h1 style= "color: black;">Credit card Details</h1>
         <form id="creditCardForm" method="post" onsubmit="submitForm(event)">
           <div class="personal-details">
             <h2>Personal Details</h2>
