--- a/personalForm.html
+++ b/personalForm.html
@@ -60,6 +60,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       h2 {
         font-size: 18px;
         margin-bottom: 10px;
+        color: black
       }
 
       .form-group {
@@ -183,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     <div class="container">
       <div class="card">
-        <h1>Personal Loan Details</h1>
+        <h2>Personal Loan Details</h2>
         <form id="creditCardForm" method="post" onsubmit="submitForm(event)">
           <div class="personal-details">
             <h2>Personal Details</h2>
