--- a/personalForm.html
+++ b/personalForm.html
@@ -60,7 +60,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       h2 {
         font-size: 18px;
         margin-bottom: 10px;
-        color: black
       }
 
       .form-group {
@@ -184,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     <div class="container">
       <div class="card">
-        <h2>Personal Loan Details</h2>
+        <h1 style= "color: black;">Personal Loan Details</h1>
         <form id="creditCardForm" method="post" onsubmit="submitForm(event)">
           <div class="personal-details">
             <h2>Personal Details</h2>
