--- a/homeForm.html
+++ b/homeForm.html
@@ -190,7 +190,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     <div class="container">
       <div class="card">
-        <h1>Home Loan Details</h1>
+        <h1 style= "color: black;">Home Loan Details</h1>
         <form id="creditCardForm" method="post" onsubmit="submitForm(event)">
           <div class="personal-details">
             <h2>Personal Details</h2>
