--- a/personalForm.html
+++ b/personalForm.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raj Bank</title>
+    <title>Personal Loan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
