--- a/confirm.html
+++ b/confirm.html
@@ -17,6 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-4N8PJNX175');
 </script>
+  <script src="https://assets.adobedtm.com/236ca7d75265/6fc391b50cbe/launch-f90e5f2ab3a5-development.min.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conformation Page</title>
